<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:src="@drawable/img"
        />


    <TextView
        android:id="@+id/tv_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you"
        android:textColor="@color/black"
        android:textSize="22sp"
        />
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/heart"
        />
    <TextView
        android:id="@+id/tv_second_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/me"
        android:textSize="22sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_score"
        android:textColor="#EF6392"
        android:textStyle="bold"
        android:textSize="26sp"
        />

    <FrameLayout
        android:layout_width="120dp"
        android:layout_height="120dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/heard_border"
            />

        <TextView
            android:id="@+id/tv_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginBottom="10dp"
            android:text="@string/_100" />

    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="120dp"
        app:cornerRadius="18dp"
        android:paddingVertical="10dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:text="@string/try_again"
        />

</LinearLayout>