<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginTop="36dp"
         android:src="@drawable/img_1"
        android:layout_gravity="center|top"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/love_calculator"
        android:layout_marginVertical="16dp"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        android:textSize="24sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"

        app:boxCornerRadiusTopStart="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_second_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="100dp"
        app:cornerRadius="24dp"
        android:paddingVertical="10dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:text="@string/calculate"
        />

</LinearLayout>